[ntp-realbox] Use the correct flag for realbox file carousel spacing
This margin should only apply to realbox, not to lens:
https://screenshot.googleplex.com/BBwSdrDttnc2M4h

Fixed lens spacing:
https://screenshot.googleplex.com/8LbeqWsEnzbeDZm

Fixed: 483105157
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7560126
Commit-Queue: Hannah Collins <hannahrogers@google.com>
Cr-Commit-Position: refs/heads/main@{#1582084}

--- a/ui/webui/resources/cr_components/composebox/composebox.css
+++ b/ui/webui/resources/cr_components/composebox/composebox.css
@@ -710,7 +710,7 @@ contextual-entrypoint-and-carousel::part(voice-icon) {
   --cr-icon-button-icon-size: 20px;
 }
 
-:host([searchbox-layout-mode]) contextual-entrypoint-and-carousel::part(cr-composebox-file-carousel) {
+:host([searchbox-next-enabled]) contextual-entrypoint-and-carousel::part(cr-composebox-file-carousel) {
   margin-top: 16px;
 }
 
